# Sherlock_Internship_Challenge

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/meetings/: README.md
data/metadata/: sample_metadata.json
data/scenarios/: basic_interview.json
data/transcripts/: sample_transcript.json
docs/: architecture.md  evaluation.md
notebooks/: 01_meeting_simulator.ipynb  02_name_signal.ipynb  03_metadata_signal.ipynb  04_transcript_signal.ipynb  05_behavior_signal.ipynb  06_video_signal.ipynb  07_llm_reasoning.ipynb  08_confidence_engine.ipynb  09_full_pipeline.ipynb
src/sherlock_candidate_identifier/: __init__.py  demo.py  text.py
src/sherlock_candidate_identifier/api/: __init__.py  main.py  routers.py  schemas.py
src/sherlock_candidate_identifier/confidence/: __init__.py  engine.py
src/sherlock_candidate_identifier/config/: __init__.py  settings.py  signal_weights.py
src/sherlock_candidate_identifier/explainability/: __init__.py  engine.py
src/sherlock_candidate_identifier/llm/: __init__.py  client.py  parser.py  prompts.py  schemas.py
src/sherlock_candidate_identifier/models/: __init__.py  events.py  evidence.py  meeting.py  prediction.py
src/sherlock_candidate_identifier/reasoning/: __init__.py  engine.py
src/sherlock_candidate_identifier/signals/: __init__.py  base.py  behavior_signal.py  llm_signal.py  (+4 more)
tests/: test_api.py  test_behavior_signal.py  test_confidence_engine.py  test_llm_signal.py  test_meeting_simulator.py  test_metadata_signal.py  test_name_signal.py  test_transcript_signal.py  test_video_signal.py
(+4 files in other folders)
