[project]
name = "sherlock-candidate-identifier"
version = "0.1.0"
description = "Evidence-fusion AI engine for real-time interview candidate identification."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "rapidfuzz>=3.9.0",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "notebook>=7.2.0",
    "ipykernel>=6.29.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
sherlock-demo = "sherlock_candidate_identifier.demo:main"

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
